--- a/src/views/MediaDetailsPanel.module.less
+++ b/src/views/MediaDetailsPanel.module.less
@@ -101,14 +101,6 @@
 	text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);
 }
 
-.title {
-	margin-bottom: 12px;
-	color: #ffffff;
-	font-size: 2.5em;
-	font-weight: 700;
-	text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);
-}
-
 .episodeInfo {
 	margin-bottom: 16px;
 }
@@ -179,12 +171,6 @@
 	max-width: 100%;
 	color: rgba(255, 255, 255, 0.9);
 	font-size: 1.1em;
-}
-
-.genres {
-	margin-bottom: 24px;
-	color: rgba(255, 255, 255, 0.7);
-	font-size: 1em;
 }
 
 .richMeta {
